objects/bre__Ticket_Order__c.object
<CustomObject>
    <fields>
        <fullName>bre__AC_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AC Event</label>
        <referenceTo>bre__BR_Event__c</referenceTo>
        <relationshipLabel>AC Ticket Orders</relationshipLabel>
        <relationshipName>AC_Ticket_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Event_Pricing_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AC Event Pricing Package</label>
        <referenceTo>bre__Event_Pricing_Package__c</referenceTo>
        <relationshipLabel>AC Ticket Orders</relationshipLabel>
        <relationshipName>AC_Ticket_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bre__Stripe_Charge_Id__c</fullName>
        <label>Stripe Charge Id</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <label>AC Ticket Order</label>
    <nameField>
        <displayFormat>TO-{000000}</displayFormat>
        <label>AC Ticket Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Ticket Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>